Edit commit